--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,368 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.rightnav{
+  grid-row-start: 1;
+  grid-row-end: 6;
+  /* border:1px solid blue; */
+  padding: 1.6em 2em 0 2em;
+  height: 95vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.leftnav{
+  grid-row-start: 1;
+  grid-row-end: 6;
   display: flex;
   flex-direction: column;
+  padding-top: 2em;
+  background-color:  #4D41BB;
+  box-shadow: 10px 0px 40px rgba(12, 63, 28, 0.06);
+  /* width:fit-content; */
+  height: 95vh;
+  padding-left: 1em;
+}
+.btn1{
+  /* margin-bottom: 1em; */
+  height: 2em;
+  color: #FFFFFF;
+  background-color: #4D41BB;
+  border-color: #4D41BB;
+  
+  border: 0.01em;
+  display: flex;
+  
+}
+.btn1 img{
+  margin:0 1em 0 1em;
+}
+.bottom{
+  margin-top: 17em;
+}
+.card1{
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #6552D2;
+  /* border: 0.01em; */
+  border-radius: 0.5em;
+  width: 10em;
+  /* height: auto; */
+  position:absolute;
+  left: 3em;
+  bottom: 7em;
+  height: 8em;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #6552D2;
+}
+.card1 span{
+  font-family: 'Proxima Nova';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 16px;
+  justify-content:center;
+
+}
+.card1 img{
+  height: 2em;
+  width: 2em;
+  position: relative;
+  bottom: 1em;
+}
+#sp2{
+  position: relative;
+  bottom: 1em;
+}
+.btn2{
+  background-color: #FFFFFF;
+  color: #7949FF;
+  width: 8em;
+  justify-content: center;
+  border-radius: 0.3em;
+  margin-bottom: 1em;
+}
+.btn3{
+  position: relative;
+  top: 8em;
+  left: 2.3em;
+  background-color: #6552D2;
+  color: #ffffff;
+  opacity: 0.8;
+  border-radius: 0.3em;
+  margin-top: 1em;
+  height: 3em;
+  padding: 1em;
+}
+.topnav{
+  grid-column-start: 2;
+  grid-column-end: 6;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  /* border: 1px solid blue; */
+  align-items: center;
+  height: 4em;
+}
+.sin{
+  background-color: #F0F2F8;
+  border-radius: 0.2em;
+  padding: 0.5em;
+  padding-left: 2em;
+  background-image: url('./Assets/icon\ search.png');
+  background-repeat: no-repeat;
+  background-position: 2%;
+
+}
+#d1{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  /* border: 1px solid red; */
+  width: 8em;
+} 
+.winner{
+  /* border: 1px solid red; */
+  width: 1.2em;
+  height: 1.2em;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #6552D2;
+}
+.winner img{
+  position: relative;
+    left: 0.3em;
+    bottom: 0.1em;
+}
+
+#sp{
+  font-family: 'Circular Std';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: bold;
+ 
+}
+#sp3{
+  font-family: 'Circular Std';
+  font-style: normal;
+  font-weight: 450;
+  font-size: 12px;
+  line-height: 15px;
+  color: #0F1D72;
+  margin-top: 0.1em;
+}
+.mainarea{
+  grid-column-start: 2;
+  grid-column-end: 6;
+  grid-row-start: 2;
+  grid-row-end: 6;
+}
+
+.line{
+  width: 12em;
+  height: 0.1em;
+  background-color: #6552D2;
+  margin-bottom: 1em;
+  
+}
+.top{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1em;
+}
+.btn4{
+  position: absolute;
+    bottom: 2em;
+    /* right: 7em; */
+    background-color: #5864FF;
+    color: white;
+    border-radius: 0.2em;
+    width: 15em;
+    height: 3em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn4 img{
+  margin-right: 1em;
+
+}
+
+.cardbox{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1em;
+}
+
+.mainarea{
+  background-color: #FBFCFF;
+  /* border: 1px solid black; */
+  position: relative;
+  bottom: 6em;
+  height: 90vh;
+}
+
+.container{
+  border: 1px solid #EEEFF2;
+  height: 10em;
+  width: 58em;
+  /* background-color: red; */
+  margin: 2em 2em 0 2em;
+  
+}
+.container-child{
+  /* background-color: blue; */
+  height: 6em;
+  margin: 2em;
+  border: 1px dashed #E7EEF4;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn5{
+  background-color: #6552D2;
+  color: #ffffff;
+  opacity: 0.8;
+  border-radius: 0.3em;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.container2{
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #EEEFF2;
+  height: 10em;
+  width: 60em;
+  /* background-color: red; */
+  margin: 2em 2em 0 2em;
+  background-color: #ffffff;
 }
+.container3{
+  border: 1px solid #EEEFF2;
+  height: auto;
+  width: 60em;
+  /* background-color: red; */
+  margin: 2em 2em 0 2em;
+  background-color: #ffffff;
+  /* display: flex; */
+
+}
+.containerchild{
+  border: 1px dashed #E7EEF4;
+    width: 8em;
+    height: 6em;
+    padding: 1em;
+    margin: 1em;
+    display: flex;
+    flex-direction: row;
+}
+
+.child1{
+  height: 4em;
+  width: 6em;
+  
+  margin: 1em;
+}
+.containerchild div{
+  background-color: #F0F2F8;
+  border-radius: 0.2em;
+}
+
+.containerchild:hover div{
+  background-color: #5864FF;
+}
+.child2{
+  height: 4em;
+  width: 4em;
+  margin: 1em 0.3em 1em 0.3em;
+
+}
+
+.child3{
+  height: 4em;
+  width: 2em;
+  margin: 1em 0.3em 1em 0.3em;
+}
+
+.cc1{
+  height: 6em;
+  width: 56em;
+  background-color: #F0F2F8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.cc2{
+  height: 6em;
+  width: 27em;
+  margin-right: 1em;
+  background-color: #F0F2F8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.cc3{
+  height: 6em;
+  width: 17.7em;
+  margin-right: 1em;
+  background-color: #F0F2F8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.cont{
+  width: auto;
+}
+.cc h4{
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+}
+.containerchild2{
+  border: 1px dashed #E7EEF4;
+  width: auto;
+  height: 6em;
+  padding: 1em;
+  margin: 1em;
+  display: flex;
+  flex-direction: row;
+}
+
+.sidebar{
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  width: fit-content;
+  height: 4.em;
+  height: 5em;
+  padding: 0.2em;
+  position: relative;
+  right: 3em;
+  top: 0.4em;
+  justify-content: space-between;
+}
+.sidebar img{
+  height: 1em;
+  width: 1em;
+}
+.ar{
+  width: 37em;
+}
+
+
